# 2025-SPE-data-release

./: .gitignore  README.md  pyproject.toml
interviews/: README.md  exploration.ipynb
interviews/data/: participants.csv
interviews/data/cleaned/: README.md
jayvee/: README.md  example.jv
surveys/: 1_preparation.ipynb  2_exploration.ipynb  3_analysis.ipynb  README.md
surveys/cleaned/: What_language_features_or_libraries_would_have_made_solving_the_exercise_easier_1.md  What_language_features_or_libraries_would_have_made_solving_the_exercise_easier_2.md  What_language_features_or_libraries_would_have_made_solving_the_exercise_easier_3.md  What_language_features_or_libraries_would_have_made_solving_the_exercise_easier_4.md  What_language_features_or_libraries_would_have_made_solving_the_exercise_easier_5.md  What_problems_with_the_programming_language_did_you_encounter_during_this_exercise_1.md  What_problems_with_the_programming_language_did_you_encounter_during_this_exercise_2.md  What_problems_with_the_programming_language_did_you_encounter_during_this_exercise_3.md  What_problems_with_the_programming_language_did_you_encounter_during_this_exercise_4.md  What_problems_with_the_programming_language_did_you_encounter_during_this_exercise_5.md
surveys/data/ss23/: answers-ex1.csv  answers-ex2.csv  answers-ex3.csv  answers-ex4.csv  (+6 more)
surveys/exercise-sources/: exercise1.csv  exercise3.csv
thematic_analysis/: MAXQDA2022 jayvee-amse-ss23 - Code System.html  MAXQDA2022 jayvee-amse-ss23 - Code System.txt  MAXQDA2022 jayvee-amse-ss23 - Code System.xlsx  README.md
(+10 files in other folders)
